# destables

./: README.md  requirements.txt  setup.cfg  setup.py
grammar/: C11.g4  compile.py
src/destables/: c11tools.py  c99.lark  c99tools.py  commonwin.py  funcwin.py  main.py  tabhelper.py  typewin.py  varwin.py
src/destables/cparser/: C11.interp  C11Lexer.py  C11Parser.py  C11Visitor.py  CLexer.py
tests/cparser/: testfunc.py  testtypes.py
