[metadata]
name = destab;es
version =  attr: destables.__version__
description = Helper tool to create SW design tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cimplart/destables
keywords = SW design, .rst tables
license = GPL 3 License
sauthor = CimplArt
author_email = schwart@o2.pl
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.interp, *.tokens

[options.entry_points]
console_scripts =
    destables = destables.main:main